# perceptual

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/plans/: 003-more-contents.md  004-playwright.md  005-maker-faire.md  006-image-coverage.md  999-backlog.md  improvements.md  initial-plan.md
.github/workflows/: ci.yml  deploy.yml
data/: exhibitions.ics  exhibitions.json
docs/: app.js  index.html  style.css
docs/data/: exhibitions.ics  exhibitions.json
scripts/: filters.py  generator.py  main.py
scripts/scrapers/: __init__.py  artagenda.py  artscape.py  base.py  base_playwright.py  bijutsu_techo.py  design_sight.py  hakubutsu_fes.py  icc.py  kanazawa21.py  maker_faire.py  mori_art_museum.py  mot.py  nmao.py  nt.py  tokyo_art_beat.py
tests/: conftest.py  test_filters.py  test_generator.py  test_main.py
tests/scrapers/: test_artagenda.py  test_artscape.py  test_base.py  test_bijutsu_techo.py  test_design_sight.py  test_hakubutsu_fes.py  test_icc.py  test_kanazawa21.py  test_maker_faire.py  test_mori_art_museum.py  test_mot.py  test_nmao.py  test_nt.py  test_tokyo_art_beat.py
